--- a/ces.refset.hg19/DESCRIPTION
+++ b/ces.refset.hg19/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ces.refset.hg19
 Title: Reference data set (hg19) for cancereffectsizeR package
-Version: 0.0.0.9000
+Version: 1.0.0
 Authors@R: 
-    person(given = "Jeffrey",
+    person(given = "Jeff",
            family = "Mandell",
            role = c("aut", "cre"),
            email = "jeff.mandell@yale.edu",
@@ -10,7 +10,7 @@ Authors@R:
 Description: A collection of reference data ready to be used with cancereffectsizeR in projects that use the hg19/GRCh37 builds of the human genome.
 License: GPL-3
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Depends: 
